tests/errors/syn_if9.java
public class syn_if9 {
public static void main(String[] args){
if ( true || false {
 
}
}
}